@@ -1,6 +1,6 @@
 {
   "name": "karma-css",
-  "version": "1.7.0",
+  "version": "1.7.1",
   "description": "The Official Sass Version of Karma-CSS: A Simple, Responsive Boilerplate for Mobile-Friendly Development.",
   "repository": {
     "type": "git",
