@@ -168,6 +168,7 @@ $input-font-size:               1.5rem !default;
 $input-font-color:              $font-color !default;
 $input-padding-y:               1rem !default;
 $input-padding-x:               1rem !default;
+$input-placeholder-color:       rgb(185, 185, 185) !default;
 $input-margin-bottom:           1.5rem !default;
 $input-transition:              background linear $animation-speed-fast,
                                 border-color linear $animation-speed-fast !default;
