@@ -5,6 +5,7 @@ Changelog
 ~~~~~~~~~~~~~~~~~~~~~~
 
 * Remove undocumented css from radios and checkboxes
+* Added input placeholder color style
 
 1.7.0 - 11-Jan-2018
 ~~~~~~~~~~~~~~~~~~~
